apps/slskd/slskd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: slskd
spec:
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      containers:
      # Gluetun VPN Container
      - name: gluetun
        image: qmcgaw/gluetun
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        ports:
          - containerPort: 5030
            name: http
          - containerPort: 50300
            name: soulseek
            
      # slskd Container
      - name: slskd
        image: slskd/slskd:latest
        volumeMounts:
        - name: slskd-config
          mountPath: /app
        - name: media-storage
          mountPath: /media
      volumes:
      - name: media-storage
        hostPath:
          path: /mnt/das-storage
      - name: slskd-config
        hostPath:
          path: /mnt/das-storage/slskd/config
---
apiVersion: v1
kind: Service
metadata:
  name: slskd-service
  namespace: slskd
spec:
  selector:
    app: slskd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5030
    - name: soulseek
      protocol: TCP
      port: 50300
      targetPort: 50300
