apps/slskd/slskd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd-ingress
  namespace: slskd
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - slskd
  rules:
  - host: slskd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slskd-service
            port:
              number: 80
